--- a/html/course.html
+++ b/html/course.html
@@ -11,7 +11,7 @@
     This course teaches how to build <b>Front-End of Web Application</b>. 
     <h2>Topics</h2>
     The following are important topics in this course.
-    <ol>
+    <ol type="i">
         <li>HTML</li>
         <li>CSS</li>
         <li>JS</li>
@@ -19,6 +19,7 @@
     </ol>
     <hr />
     For more details, please visit 
-    <a title="Detailed Syllabus" target="_blank" href="http://www.srikanthtechnologies.com">SrikanthTechnologies.Com</a>
+    <a title="Detailed Syllabus" 
+       target="_blank" href="http://www.srikanthtechnologies.com">SrikanthTechnologies.Com</a>
 </body>
 </html>
