--- a/jquery/events_demo.html
+++ b/jquery/events_demo.html
@@ -6,10 +6,11 @@
 <script>
     // Document ready event 
     $(() => {
-        $("button").click( (e) =>  {
-            console.log(e)
-            alert("You Clicked On " + e.target.innerText  + " Button!!")
-        }
+        $("button").click(
+            (e) =>  {
+              console.log(e)
+              alert("You Clicked On " + e.target.innerText  + " Button!!")
+            }
        )
     });
 </script>
